fix speech bubble spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,8 +180,10 @@ html, body {
   margin-bottom: 5px;
 }
 
-.speech-bubble-msg br {
-  line-height: 21px;
+.speech-bubble-msg p {
+  margin-bottom: 5px;
+  -webkit-margin-after: 5px;
+  -webkit-margin-before: 0;
 }
 
 .speech-bubble-arrow {
@@ -272,13 +274,13 @@ html, body {
   background-color: #fff;
   border: 1px solid #00f;
   color: #000;
-  font-size: 18px;
-  line-height: 25px;
   padding-top: 8px;
   padding-left: 8px;
   position: absolute;
-  width: 376px;
-  height: 178px;
+  font-size: 14px;
+  line-height: 20px;
+  width: 260px;
+  height: 150px;
   top: 120px;
   left: 300px;
 }
